--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
 		
 	</div>
 	<div class="address">
-		
+		<h3>Address</h3>
+		<p>Vill-Pashapur, P.O. Mudaforgonj</p>
 	</div>
 	<div class="">
 		
